@@ -1,4 +1,6 @@
 3.0.2
+- Fixed bug causing configobj to throw an exception with Couchpotato v2s config
+- corrected a bug causing most of the suite to crash on first launch in certain circumstances
 - update to SABnzbd-0.7.9
 - update to CouchPotatoServer-393c14d
 - update to Headphones-263272c
